--- a/Frontend/wwwroot/index.html
+++ b/Frontend/wwwroot/index.html
@@ -30,6 +30,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <script src="js/restAPIrequests.js"></script>
 </body>
 
 </html>
